get statics from the repo

--- a/html-template.html
+++ b/html-template.html
@@ -14,7 +14,7 @@
 <div style="font-family: Arial, Helvetica, sans-serif">
   <div style="display: flex">
     <div id="signature-image" style="float: left">
-      <img src="disclaimer_files/image001.png" alt="His House Childre's Home" />
+      <img src="https://mrsantacruz86.github.io/disclaimer-template/disclaimer_files/image001.png" alt="His House Childre's Home" />
     </div>
     <div id="signature-info" style="margin-left: 1rem">
       <p style="font-size: 1.5rem">%%DisplayName%%</p>
@@ -33,16 +33,16 @@
         <a
           href="https://www.facebook.com/pages/His-House-Childrens-Home/106451883999"
         >
-          <img src="disclaimer_files\facebook.svg" alt="Facebook" />
+          <img src="https://mrsantacruz86.github.io/disclaimer-template/disclaimer_files/facebook.svg" alt="Facebook" />
         </a>
         <a href="https://twitter.com/HisHouseMiami/">
-          <img src="disclaimer_files\twitter.svg" alt="Facebook" />
+          <img src="https://mrsantacruz86.github.io/disclaimer-template/disclaimer_files/twitter.svg" alt="Facebook" />
         </a>
         <a href="https://www.linkedin.com/company/his-house-childrens-home/">
-          <img src="disclaimer_files\linkedin.svg" alt="Facebook" />
+          <img src="https://mrsantacruz86.github.io/disclaimer-template/disclaimer_files/linkedin.svg" alt="Facebook" />
         </a>
         <a href="http://instagram.com/hishousemiami/">
-          <img src="disclaimer_files\instagram.svg" alt="Facebook" />
+          <img src="https://mrsantacruz86.github.io/disclaimer-template/disclaimer_files/instagram.svg" alt="Facebook" />
         </a>
       </div>
     </div>
